// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`store:ServiceStore 1`] = `
{
  "action": undefined,
  "busying": false,
  "checking": false,
  "childrenIds": [],
  "data": {},
  "dialogData": undefined,
  "dialogOpen": false,
  "disposed": false,
  "drawerData": undefined,
  "drawerOpen": false,
  "error": false,
  "fetching": false,
  "hasRemoteData": false,
  "id": "1",
  "initedAt": 0,
  "initializing": false,
  "loadingVisible": true,
  "msg": "",
  "parentId": "",
  "path": "",
  "pristine": {},
  "saving": false,
  "schema": null,
  "schemaKey": "",
  "storeType": "ServiceStore",
  "updatedAt": 0,
}
`;

exports[`store:ServiceStore fetchInitData failed 1`] = `
[
  {
    "action": undefined,
    "busying": false,
    "checking": false,
    "childrenIds": [],
    "data": {},
    "dialogData": undefined,
    "dialogOpen": false,
    "disposed": false,
    "drawerData": undefined,
    "drawerOpen": false,
    "error": false,
    "fetching": true,
    "hasRemoteData": false,
    "id": "1",
    "initedAt": 0,
    "initializing": false,
    "loadingVisible": true,
    "msg": "",
    "parentId": "",
    "path": "",
    "pristine": {},
    "saving": false,
    "schema": null,
    "schemaKey": "",
    "storeType": "ServiceStore",
    "updatedAt": 0,
  },
  {
    "action": undefined,
    "busying": false,
    "checking": false,
    "childrenIds": [],
    "data": {},
    "dialogData": undefined,
    "dialogOpen": false,
    "disposed": false,
    "drawerData": undefined,
    "drawerOpen": false,
    "error": false,
    "fetching": false,
    "hasRemoteData": false,
    "id": "1",
    "initedAt": 0,
    "initializing": false,
    "loadingVisible": true,
    "msg": "",
    "parentId": "",
    "path": "",
    "pristine": {},
    "saving": false,
    "schema": null,
    "schemaKey": "",
    "storeType": "ServiceStore",
    "updatedAt": 0,
  },
]
`;

exports[`store:ServiceStore fetchInitData success 1`] = `
[
  {
    "action": undefined,
    "busying": false,
    "checking": false,
    "childrenIds": [],
    "data": {},
    "dialogData": undefined,
    "dialogOpen": false,
    "disposed": false,
    "drawerData": undefined,
    "drawerOpen": false,
    "error": false,
    "fetching": true,
    "hasRemoteData": false,
    "id": "1",
    "initedAt": 0,
    "initializing": false,
    "loadingVisible": true,
    "msg": "",
    "parentId": "",
    "path": "",
    "pristine": {},
    "saving": false,
    "schema": null,
    "schemaKey": "",
    "storeType": "ServiceStore",
  },
  {
    "action": undefined,
    "busying": false,
    "checking": false,
    "childrenIds": [],
    "data": {
      "a": 1,
      "b": 2,
    },
    "dialogData": undefined,
    "dialogOpen": false,
    "disposed": false,
    "drawerData": undefined,
    "drawerOpen": false,
    "error": false,
    "fetching": false,
    "hasRemoteData": true,
    "id": "1",
    "initedAt": 0,
    "initializing": false,
    "loadingVisible": true,
    "msg": "",
    "parentId": "",
    "path": "",
    "pristine": {
      "a": 1,
      "b": 2,
    },
    "saving": false,
    "schema": null,
    "schemaKey": "",
    "storeType": "ServiceStore",
  },
]
`;
